--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     <div class="full-width header-wrapper">
       <header>
         <h1>Style Tile Template</h1>
-        <h2>Project name</h2>
+        <h2>Mexi-can</h2>
         <h3>Style tile</h3>
         <h4>Version 1</h4>
       </header>
+      <div class="hatContainer falling">
+        <div class="hatSprite penduling"></div>
+      </div>
     </div>
 
     <main>
@@ -81,7 +84,19 @@
             <span class="font-color">#color value</span>
           </p>
         </section>
-        <section class="adjectives">
+
+        <section class="iconos">
+          <div class="icono-wraper">
+            <div class="chili"></div>
+            <div class="beef"></div>
+            <div class="pork"></div>
+            <div class="chiken"></div>
+            <div class="fish"></div>
+            <div class="vegetarian"></div>
+            <div class="vegan"></div>
+          </div>
+        </section>
+        <!-- <section class="adjectives">
           <h3 class="section-heading">Adjectives</h3>
           <ul>
             <li>Write</li>
@@ -89,7 +104,7 @@
             <li>adjectives</li>
             <li>here</li>
           </ul>
-        </section>
+        </section> -->
       </div>
       <!-- end .column -->
     </main>
