--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="hatContainer falling">
         <div class="hatSprite penduling"></div>
       </div>
+      <div class="mich"></div>
     </div>
 
     <main>
@@ -26,11 +27,11 @@
         <section class="swatches">
           <h3 class="section-heading">Colour swatches</h3>
           <ul class="swatchgrid">
-            <li class="color-swatch-1"></li>
-            <li class="color-swatch-2"></li>
-            <li class="color-swatch-3"></li>
-            <li class="color-swatch-4"></li>
-            <li class="color-swatch-5"></li>
+            <li class="color-swatch-1">#d44884</li>
+            <li class="color-swatch-2">#33bcd4</li>
+            <li class="color-swatch-3">#277987</li>
+            <li class="color-swatch-4">#87204d</li>
+            <li class="color-swatch-5">#d4c85d</li>
           </ul>
         </section>
         <section class="textures">
@@ -56,13 +57,13 @@
           <h3 class="section-heading">Typography</h3>
           <h1 class="h1-sample">A sample header</h1>
           <p class="font-details-h1">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Chelsea Market</span>,
+            <span class="font-color">#403030</span>
           </p>
           <h2 class="h2-sample">An example of a sub header</h2>
           <p class="font-details-h2">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Life Savers</span>,
+            <span class="font-color">#403030</span>
           </p>
           <p class="typography-sample">
             This sample paragraph has <strong>strong parts</strong> and
@@ -73,15 +74,15 @@
             netus et malesuada fames ac turpis egestas.
           </p>
           <p class="font-details-p">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Roboto</span>,
+            <span class="font-color">#403030</span>
           </p>
           <a href="#" class="typography-sample"
             >This is an example of a text link.</a
           >
           <p class="font-details-a">
-            <span class="font-name">Font Name</span>,
-            <span class="font-color">#color value</span>
+            <span class="font-name">Chelsea Market / Roboto</span>,
+            <span class="font-color">#33bcd4 / #277987</span>
           </p>
         </section>
 
