--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         </section>
 
         <section class="iconos">
+          <h2>Iconography</h2>
           <div class="icono-wraper">
             <div class="chili"></div>
             <div class="beef"></div>
